--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("images/image.png") ghostwhite;
+  background: url("../assets/images/msp_img1.png") ghostwhite;
   background-size: 100%;
   background-attachment: fixed;
   margin: 10px;
