made index page more mobile responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,136 +1,126 @@
 @import url('https://fonts.googleapis.com/css?family=Courgette');
 
-body {
-  background: url("../assets/images/sw6.jpg") ghostwhite;
-  background-size: 100%;
-  background-attachment: fixed;
+body
+{
   margin: 10px;
+
+  background: url('../assets/images/sw6.jpg') ghostwhite;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 
-h2 {
+.mainTitle, .subTitle
+{
   font-family: 'Courgette', cursive;
-  /*font-family: 'Playfair Display SC', serif;*/
-  /*font-weight: bold;*/
+}
+
+.titlePanel {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 
-h3 {
-  padding-left: 40px;
+
+h3
+{
   padding-top: 20px;
+  padding-left: 40px;
+
   opacity: .6;
 }
 
 
-h4, h5 {
+h4,
+h5
+{
   color: white;
   /*font-family: 'Playfair Display SC', serif;*/
   /*font-weight: bold;*/
 }
 
 
-#signin {
-  height: 350px;
-  border-radius: 10px;
+#signin
+{
   padding: 15px;
+
+  border-radius: 10px;
   /*margin-left: 25%;
   margin-right: 25%;*/
 }
 
 
-#signup {
-  /*height: 220px;*/
+#signup
+{
+  margin: 0;
+  padding: 0;
+
   border-radius: 10px;
-  padding: 15px;
-  /*margin-left: 25%;
-  margin-right: 25%;*/
 }
 
 
-#enterinfo {
-  height: 1100px;
-  border-radius: 10px;
+#enterinfo
+{
+  /*height: 1100px;*/
   padding: 25px;
+
+  border-radius: 10px;
   /*margin-left: 25%;
   margin-right: 25%;*/
 }
 
 
-#data {
-  padding-left: 40px;
+#data
+{
   padding-right: 40px;
+  padding-left: 40px;
   /*margin-left: 25%;
   margin-right: 25%;*/
 }
 
 
-.dropdown {
-  padding-left: 40px;
+.dropdown
+{
   padding-right: 40px;
+  padding-left: 40px;
 }
 
 
-#signin-buttons {
-  padding-top: 25px;
+.signin-buttons
+{
+  margin-top: 4%;
 }
 
 
-#signup-buttons {
+#signup-buttons
+{
   padding-top: 35px;
 }
 
 
-.loginButton {
-  margin-right: 15px;
-  /*margin-left: 8px;*/
-}
-
-
-.signupButton {
-  margin-left: 15px;
-}
-
-
-.card-panel {
+.card-panel
+{
   /*background-color: #0c070e;*/
   margin: 2px;
-  padding: 15px;
+  /*padding: 15px;*/
 }
 
 
-.card-title {
+.card-title
+{
   font-size: 30px !important;
+
   text-align: center;
 }
 
 
-#log-in {
-  margin-left: 15%;
-}
-
-
-.label {
+.label
+{
   font-size: large;
 }
 
 
-input[type=text] {
+input[type=text], input[type=password], input
+{
   color: white;
 }
-
-
-input[type=password] {
-  color: white;
-}
-
-input {
-  color: white;
-}
-
-/*.logo {
-  padding: 0;
-}
-
-.opacity {
-  opacity: .8;
-}*/
