almost final version of updating trips, currently updates the last trip entered

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,3 +110,12 @@ input
 {
     color: white;
 }
+
+#editStarting,
+#editEnding,
+#editTips,
+#editMiles,
+#editHours,
+#editDescription {
+    color: red;
+}
